--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: RefPlus
 Type: Package
 Title: A function set for the Extrapolation Strategy (RMA+) and Extrapolation 
 	Averaging (RMA++) methods.
-Version: 1.15.0
+Version: 1.15.1
 Author: Kai-Ming Chang <kaiming@gmail.com>,
 	Chris Harbron <Chris.Harbron@astrazeneca.com>,
 	Marie C South <Marie.C.South@astrazeneca.com>
@@ -12,5 +12,5 @@ Depends: R (>= 2.8.0), Biobase (>= 2.1.0), affy (>= 1.20.0), affyPLM (>= 1.18.0)
 Suggests: affydata
 Description: The package contains functions for pre-processing Affymetrix data 
 	using the RMA+ and the RMA++ methods.
-License: GPL version 2 or newer
+License: GPL (>= 2)
 biocViews: Microarray, OneChannel, Preprocessing
